--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "chart.js": "^4.4.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-simple-maps": "^3.0.0",
     "recharts": "^2.10.1"
   },
