--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-simple-maps": "^3.0.0",
-    "recharts": "^2.10.1"
+    "react-slick": "^0.29.0",
+    "recharts": "^2.10.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
