--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.21.1",
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.29.0",
     "recharts": "^2.10.1",
