--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-boundary-canvas": "^1.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
